--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "clone instagram server side",
   "main": "index.js",
   "scripts": {
-    "test": "node server.js"
+    "test": "node index.js"
   },
-  "author": "hl",
+  "author": "hl <hlmasterchief93@gmail.com>",
   "license": "MIT",
+  "homepage": "http://cinstagram.herokuapp.com",
   "engines": {
     "node": ">=0.10"
   },
   "dependencies": {
-    "restify": "^4.0.0",
-    "mongojs": "^1.3.0"
+    "mongojs": "^1.3.0",
+    "mongoose": "^4.1.6",
+    "restify": "^4.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://hlmasterchief93@bitbucket.org/hlmasterchief93/cinstagram-server.git"
   }
 }
