--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">=0.10"
   },
   "dependencies": {
+    "cloudinary": "^1.2.4",
     "jsonwebtoken": "^5.4.0",
     "mongojs": "^1.3.0",
     "mongoose": "^4.1.6",
