--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   },
   "dependencies": {
     "async": "^1.4.2",
+    "bcrypt": "^0.8.5",
     "cloudinary": "^1.2.4",
     "jsonwebtoken": "^5.4.0",
     "mongojs": "^1.3.0",
-    "mongoose": "^4.1.6",
+    "mongoose": "^4.1.10",
     "restify": "^4.0.0"
   },
   "repository": {
