--- a/package.json
+++ b/package.json
@@ -14,19 +14,16 @@
     "node": ">=0.10"
   },
   "dependencies": {
+    "morgan": "^1.6.1",
     "async": "^1.4.2",
     "bcrypt": "^0.8.5",
     "cloudinary": "^1.2.4",
     "jsonwebtoken": "^5.4.0",
-    "mongojs": "^1.3.0",
     "mongoose": "^4.1.10",
     "restify": "^4.0.0"
   },
   "repository": {
     "type": "git",
     "url": "https://hlmasterchief93@bitbucket.org/hlmasterchief93/cinstagram-server.git"
-  },
-  "devDependencies": {
-    "morgan": "^1.6.1"
   }
 }
