--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "nodemon index.js"
+    "test": "nodemon --debug index.js"
   },
   "author": "hl <hlmasterchief93@gmail.com>",
   "license": "MIT",
